--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,26 +6,43 @@
     <title>Document</title>
     <style>
         .container {
-            background-color: red;
+            position: relative;
+            width: 100%;
+            max-width: 1863px;
+            background: black;
         }
 
         .container img {
-
+            border-bottom: 2px solid white;
+            width: 100%;
+            height: 700px;
         }
 
         .container .btn {
-
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            --ms-transform: translate(-50%, -50%);
+            background-color: #555;
+            color: white;
+            font-size: 16px;
+            padding: 12px 24px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            text-align: center;
         }
 
         .container .btn:hover {
-
+            background-color: black;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <%= image_tag("1.jpg") %>
-        <%= link_to 'Admin panel', class: 'btn' %>
+        <%= link_to 'Admin panel', 'ex.com', class: 'btn' %>
     </div>
 </body>
 </html>
